--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+ <meta name="viewport" content="width=device-width; initial-scale=0.43; maximum-scale=1.5;">
+   <link rel="apple-touch-icon" href="images/template/picture.png"/>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
