--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +5,7 @@
     <meta charset="UTF-8">
     
  <meta name="viewport" content="width=device-width; initial-scale=0.43; maximum-scale=1.5;">
-   <link rel="apple-touch-icon" href="images/template/picture.png"/>
+   <link rel="apple-touch-icon" href="images/template/picture.png" href=" display:flex" href=" position:fixed"/>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
